fix spacing issue with 50/50 inputs

--- a/_assets/sass/objects/forms.scss
+++ b/_assets/sass/objects/forms.scss
@@ -84,6 +84,8 @@ $line-height-half: $line-height / 2;
 
 		.o-form__field {
 			@include column( 1/2 );
+			margin-top: 0;
+
 		}
 
 	}
